# cmd/webserver/docs/swagger.json
@@ -39,7 +39,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Data_resp"
+                            "$ref": "#/definitions/models.Version"
                         }
                     }
                 }
@@ -90,6 +90,20 @@
             "properties": {
                 "status": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.Version": {
+            "type": "object",
+            "properties": {
+                "buildTime": {
+                    "type": "string"
+                },
+                "commit": {
+                    "type": "string"
+                },
+                "release": {
+                    "type": "string"
                 }
             }
         }
