# cmd/webserver/handlers/home.go
@@ -3,6 +3,7 @@ package handlers
 import (
 	_ "WebServer/cmd/webserver/docs" // docs is generated by Swag CLI, you have to import it.
 	"WebServer/cmd/webserver/models"
+	"WebServer/version"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -12,13 +13,13 @@ import (
 // HomeHandlers godoc
 // @Summary Retrieves user based on given ID
 // @Produce json
-// @Success 200 {object} models.Data_resp
+// @Success 200 {object} models.Version
 // @Router /home/ [post]
 func HomeHandlers(c *gin.Context) {
-	var version models.Version
-	version.BuildTime = version.BuildTime
-	version.Commit = version.Commit
-	version.Release = version.Release
-	c.JSON(http.StatusOK, version)
+	var vers models.Version
+	vers.BuildTime = version.BuildTime
+	vers.Commit = version.Commit
+	vers.Release = version.Release
+	c.JSON(http.StatusOK, vers)
 
 }
